# mallard

./: .gitignore  AGENTS.md  AGENT_SYNC_FILE_SETS.md  CLOUDFLARE_R2_MANAGED_CLOUD_ARCHITECTURE.md  DESIGN2.md  DESKTOP_DISTRIBUTION_DESIGN.md  PLAN_CODEX_MANUAL_PROJECT_PATH_PICKING.md  PLAN_CODEX_THREAD_REBUILD_AND_SIDEBAR.md  PLAN_COMPOSITE_PROJECT_KEY.md  PLAN_ENVIRONMENT_RECONCILER.md  PLAN_MANUAL_PROJECT_PATH_MAPPING.md  PLAN_MULTI_STORAGE.md  PLAN_NON_GIT_PROJECT_FILE_SYNC.md  PLAN_PORTABLE_AGENT_SETUP.md  PLAN_PORTABLE_AGENT_SETUP_V2.md  PLAN_PORTABLE_PROJECTS.md  PLAN_PROJECT_CONFIGURATION_WORKFLOW.md  PLAN_PROJECT_SCOPED_SYNC.md  PLAN_R2_STORAGE_CLI_SETUP.md  PLAN_TAB_BASED_PUSH_PULL_WORKFLOW.md  PLAN_V3_GLOBAL_PLUGINS_AND_SKILLS.md  README.md  TECHNICAL_REPORT.md  TEST_PLAN_NON_GIT_PROJECT_CONTENT_SYNC.md  index.html  package-lock.json  package.json
.superdesign/: design-system.md
docs/: CLOUDFLARE_R2_MANAGED_CLOUD_ARCHITECTURE.md  PLAN_CLAUDE_PLUGIN_LOCK.md  PLAN_CLAUDE_PROJECT_PATH_REMAP.md  PLAN_CODEX_PLUGIN_RESTORE_HARDENING.md  PLAN_FRESH_ROOT.md  PLAN_GLOBAL_AGENT_SYNC_DIR.md  (+10 more)
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: activity_log.rs  codex_config.rs  codex_plugins.rs  codex_sidebar.rs  lib.rs  project_paths.rs  readiness.rs
src-tauri/src/project_sync_v3/: bundle_engine.rs  chat_history.rs  commands.rs  domain.rs  global_inventory.rs  mod.rs  persistence.rs  provider_capture.rs  s3_store.rs
src-tauri/src/sync_tests/: README.md  harness.rs  mod.rs  stub_s3.rs
(+74 files in other folders)
