[package]
name = "agent-sync"
version = "0.1.0"
description = "Agent Sync — sync ~/.codex to the cloud"
authors = ["you"]
edition = "2021"

[lib]
name = "tauri_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.9"
dirs = "5"
walkdir = "2"
tokio = { version = "1", features = ["full"] }
aws-sdk-s3 = "1"
aws-smithy-http-client = { version = "1", features = ["rustls-aws-lc"] }
bytes = "1"
sha2 = "0.10"
rusqlite = { version = "0.40.1", features = ["backup", "bundled"] }
tempfile = "3"
getrandom = "0.3"

[dev-dependencies]
# `test` enables tauri::test::{mock_builder, MockRuntime} for the headless
# integration tests in src/sync_tests/.
tauri = { version = "2", features = ["test"] }
# Stub S3 server (already in the dependency tree via aws-smithy-http-client).
hyper = { version = "1", features = ["server", "http1"] }
hyper-util = { version = "0.1", features = ["tokio"] }
http-body-util = "0.1"
